--- a/codeception.yml
+++ b/codeception.yml
@@ -5,7 +5,7 @@ paths:
     data: tests/_data
     support: tests/_support
 params:
-    - env/.env.test
+    - "env/.env.test"
 settings:
     bootstrap: _bootstrap.php
     colors: true
