--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,4 +2,5 @@
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^(.*)$ index.php?_url=/$1 [QSA,L]
+    ErrorDocument 403 /forbidden
 </IfModule>
