--- a/tests/api.suite.yml
+++ b/tests/api.suite.yml
@@ -3,12 +3,12 @@ modules:
     enabled: [PhpBrowser, REST, Db, Asserts, \Helper\Api]
     config:
       PhpBrowser:
-          url: http://test.app.com
+          url: http://test.phalconbaseproject.com
       REST:
           depends: PhpBrowser
-          url:  http://test.app.com
+          url:  http://test.phalconbaseproject.com
       Db:
-          dsn: 'mysql:host=localhost;dbname=vconnect_sss_test'
+          dsn: 'mysql:host=127.0.0.1;dbname=phalcon_base_project_test'
           user: 'root'
           password: ''
           populate: false
